--- a/04_Diagrama_Clases/nbproject/project.properties
+++ b/04_Diagrama_Clases/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/04_Diagrama_Clases.jar
+dist.jar=${dist.dir}/04.1_Diagrama_Clases.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=pkg04_diagrama_clases.Main
+main.class=pkg04.pkg1_diagrama_clases.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
